# BiteGraph

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
cli/: bitegraph_cli.py
docs/: adapters.md  architecture.md  email_ingestion.md  mapping.md  privacy.md
scripts/: ci_local.ps1  ci_local.sh  fdc_map_eval.py  osm_region_ingest.py
src/bitegraph/: __init__.py  ci.py  cli.py
src/bitegraph/adapters/: __init__.py
src/bitegraph/adapters/_template_adapter/: README.md  __init__.py  adapter.py
src/bitegraph/adapters/_template_adapter/fixtures/: sample_order.csv
src/bitegraph/adapters/ubereats/: README.md  __init__.py  adapter.py
src/bitegraph/adapters/ubereats/fixtures/: missing_columns.csv  multiple_orders.csv  order_with_modifiers.csv  simple_order.csv  weird_unicode.csv
src/bitegraph/core/: __init__.py  classify_rules.py  confidence.py  consume_infer.py  interfaces.py  map_templates.py  models.py  nutrition_flavor.py  pipeline.py  registry.py
src/bitegraph/templates/: __init__.py  merchants.yaml  non_food_keywords.yaml
src/bitegraph/templates/dishes/: burgers.json  grocery_raw.json
src/bitegraph/templates/ingredient_profiles/: basic.json
src/bitegraph/templates/ingredients/: basic.json
src/bitegraph/templates/modifiers/: basic.json
tests/: __init__.py  test_classifier.py  test_consumption_infer.py  test_fixture_sizes.py  test_mapper.py  test_models.py  test_nutrition_flavor.py  test_pipeline.py  test_template_adapter.py  test_ubereats_adapter.py
